fix: 주문 결제 관련 버그 수정 사장님 Point 증가하지 않는 문제 수정